tdf#109390 Warn about empty New Document only on Apply, not OK

Creating new document type hyperlink shows a warning about empty
file name only when pressing Apply, and closes silently on OK

Change-Id: I00e7b20a12df8e35e154e3cf532067cbad72c614