cui/source/dialogs/hldocntp.cxx
@@ -241,11 +241,11 @@ void SvxHyperlinkNewDocTp::SetInitFocus()
 |* Ask page whether an insert is possible
 |*
 \************************************************************************/
-bool SvxHyperlinkNewDocTp::AskApply()
+bool SvxHyperlinkNewDocTp::AskApply( bool bShowWarning )
 {
     INetURLObject aINetURLObject;
     bool bRet = ImplGetURLObject(m_xCbbPath->get_active_text(), m_xCbbPath->GetBaseURL(), aINetURLObject);
-    if ( !bRet )
+    if ( !bRet && bShowWarning )
     {
         std::unique_ptr<weld::MessageDialog> xWarn(Application::CreateMessageDialog(mpDialog->getDialog(),
                                                    VclMessageType::Warning, VclButtonsType::Ok,
